--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -3637,3 +3637,15 @@ span.hidelink
 	overflow: auto;
 	max-height: 306px;
 }
+/* xxx float these items to the right */
+img#smflogo
+{
+	padding-top: 0.1em;
+/*	padding-left: 10px; */
+	vertical-align: top;
+}
+/* xxx don't display images in signatures */
+.signature img, .signature object, .signature embed
+{
+	display: none;
+}
